# icikt

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.rst  api.html  example_r.R  genindex.html  guide.html  icikt.py  index.html  kendalltau.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test_arrays.py  tutorial.html
.github/workflows/: documentation.yml  package_release.yml  pull_request.yml  py.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/icikt/: kendall_dis.html  methods.html
_sources/: api.rst.txt  index.rst.txt
docs/: api.rst  conf.py  guide.rst  index.rst  tutorial.rst
icikt/: __init__.py  __main__.py  _kendall_dis.pyx  icikt.py  icipkt.py
pyicikendalltau/: bigTest.csv  kendalltau.py
src/: _custom_build.py
src/icikt/: __init__.py  __main__.py  icikt.py  kendall_dis.py  kendall_dis_doc.py  left_censorship.py  methods.py  utility.py
test/: bigTest.csv  example_left_missing.csv  small_sample.csv  small_sample.tsv  test.py  test_cli.py  test_icikt.py  test_left_censor.py
